smol-kv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: smol-kv
spec:
  selector:
    app: smol-kv
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 5050
      targetPort: 5050
