smol-kv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smol-kv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: kv.mpw.sh
    external-dns.alpha.kubernetes.io/target: k3s.mpw.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: kv.mpw.sh
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5050
            path: /
  tls:
    - hosts:
        - kv.mpw.sh
      secretName: smol-kv-tls
